make site mobile compatible

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
- <!--  <nav class="navbar with-shadow navbar-inverse navbar-expand-sm navbar-light fixed-top bg-light"> -->
  <nav class="navbar with-shadow navbar-inverse navbar-expand-sm fixed-top">
 
-    <a href="home"> <img src="/images/iitm.jpg" width=60 hspace=20 /> </a>   
-    <div class="topnav">
+    <div class="container">
+    <a href="home"> <img src="/images/iitm.jpg" width=60 /> </a>   
+
       <!-- Navigation Links -->
   <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav ml-auto">
