--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,11 @@
 
     <div class="container">
     <a href="home"> <img src="/images/iitm.jpg" width=60 /> </a>   
+ <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
+<!--    <div class="topnav"> -->
       <!-- Navigation Links -->
   <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav ml-auto">
